--- a/Jackets.html
+++ b/Jackets.html
@@ -28,6 +28,122 @@
         </nav>
       </div>
     </header>
-    <main></main>
+    <main>
+      <h1>EXPLORE OUR JACKETS</h1>
+      <div class="product-cards">
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket1.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">$200,-</p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket2.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">$200,-</p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket3.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">$200,-</p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket4.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">$200,-</p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket5.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">$200,-</p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket6.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">$200,-</p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket7.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">$200,-</p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
