--- a/index.html
+++ b/index.html
@@ -28,6 +28,61 @@
         </nav>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="img+CTA">
+        <div class="head-picture-container">
+          <picture>
+            <img
+              id="head-picture"
+              src="img/pexels-gabriela-palai-Home.jpg"
+              alt="Blue rain jacket on pier"
+            />
+          </picture>
+        </div>
+        <div class="CTA-Button">
+          <h1>
+            <a id="CTA-link" href="Jackets.html">Start Your Adventure</a>
+          </h1>
+        </div>
+      </section>
+      <section class="main-content">
+        <div class="CTAcard">
+          <img
+            id="homeJacket"
+            src="img/RainyDays_Jacket1.jpg"
+            alt="Orange and grey jacket"
+          />
+          <div class="card-container">
+            <h2>Nature's Bliss Eco-Friendly Rain Jacket:</h2>
+            <p>
+              The Nature's Bliss Eco-Friendly Rain Jacket is perfect for outdoor
+              enthusiasts who are environmentally conscious. Made from recycled
+              materials, this jacket combines sustainability with functionality.
+              Whether you're exploring the wilderness or enjoying a peaceful
+              camping trip, this rain jacket keeps you dry while caring for the
+              planet.
+            </p>
+            <a href="Jackets.html">Explore our bestseller</a>
+          </div>
+        </div>
+        <div class="ecoCard">
+          <i class="fa-solid fa-recycle fa-2xl" style="color: #1e8522;"></i>
+          <div class="ecoText">
+            <h2>At Rainy Days,</h2>
+            <p>
+               our passion for outdoor adventures goes hand in
+              hand with our commitment to eco-friendly business practices. We've
+              woven sustainability into every stitch of our rainwear, using
+              recycled materials and responsible sourcing. When you choose Rainy
+              Days, you choose rainwear that reflects your dedication to
+              sustainable exploration. Join our eco-conscious outdoor community
+              and embark on rain-soaked adventures with a clear conscience,
+              where protecting the environment is as important as the journey
+              itself.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
