--- a/Jackets.html
+++ b/Jackets.html
@@ -29,7 +29,7 @@
       </div>
     </header>
     <main>
-      <h1>EXPLORE OUR JACKETS</h1>
+      <h1 class="h1-jackets">EXPLORE OUR JACKETS</h1>
       <div class="product-cards">
         <div class="card">
           <img
@@ -37,7 +37,9 @@
             alt="Oransje vindstopper med belte, hette og refleks"
           />
           <h2>Trailblazer Pro Waterproof Jacket</h2>
-          <p class="price">$200,-</p>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
           <p class="jacket-text">
             The Trailblazer Pro Waterproof Jacket is designed for the rugged
             outdoor explorer like Owen. Made with high-performance waterproof
@@ -53,7 +55,9 @@
             alt="Oransje vindstopper med belte, hette og refleks"
           />
           <h2>Trailblazer Pro Waterproof Jacket</h2>
-          <p class="price">$200,-</p>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
           <p class="jacket-text">
             The Trailblazer Pro Waterproof Jacket is designed for the rugged
             outdoor explorer like Owen. Made with high-performance waterproof
@@ -69,7 +73,9 @@
             alt="Oransje vindstopper med belte, hette og refleks"
           />
           <h2>Trailblazer Pro Waterproof Jacket</h2>
-          <p class="price">$200,-</p>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
           <p class="jacket-text">
             The Trailblazer Pro Waterproof Jacket is designed for the rugged
             outdoor explorer like Owen. Made with high-performance waterproof
@@ -85,7 +91,9 @@
             alt="Oransje vindstopper med belte, hette og refleks"
           />
           <h2>Trailblazer Pro Waterproof Jacket</h2>
-          <p class="price">$200,-</p>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
           <p class="jacket-text">
             The Trailblazer Pro Waterproof Jacket is designed for the rugged
             outdoor explorer like Owen. Made with high-performance waterproof
@@ -101,7 +109,9 @@
             alt="Oransje vindstopper med belte, hette og refleks"
           />
           <h2>Trailblazer Pro Waterproof Jacket</h2>
-          <p class="price">$200,-</p>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
           <p class="jacket-text">
             The Trailblazer Pro Waterproof Jacket is designed for the rugged
             outdoor explorer like Owen. Made with high-performance waterproof
@@ -117,7 +127,9 @@
             alt="Oransje vindstopper med belte, hette og refleks"
           />
           <h2>Trailblazer Pro Waterproof Jacket</h2>
-          <p class="price">$200,-</p>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
           <p class="jacket-text">
             The Trailblazer Pro Waterproof Jacket is designed for the rugged
             outdoor explorer like Owen. Made with high-performance waterproof
@@ -127,13 +139,15 @@
             your outdoor activities.
           </p>
         </div>
-        <div class="card">
+        <div class="card-last">
           <img
             src="img/RainyDays_Jacket7.jpg"
             alt="Oransje vindstopper med belte, hette og refleks"
           />
           <h2>Trailblazer Pro Waterproof Jacket</h2>
-          <p class="price">$200,-</p>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
           <p class="jacket-text">
             The Trailblazer Pro Waterproof Jacket is designed for the rugged
             outdoor explorer like Owen. Made with high-performance waterproof
