--- a/AboutUs.html
+++ b/AboutUs.html
@@ -28,6 +28,82 @@
         </nav>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div id="ecoIcon">
+        <i class="fa-solid fa-recycle fa-2xl" style="color: #1e8522"></i>
+      </div>
+      <div class="aboutUs-content">
+        <div class="infoCard">
+          <h1>Welcome To Rainy Days</h1>
+          <p>
+            Your Ultimate Rainwear Destination for Outdoor Adventures Are you an
+            outdoor enthusiast with a passion for exploring the beauty of
+            nature? At Rainy Days, we understand your love for adventure, and
+            we're here to keep you dry and comfortable during your outdoor
+            escapades. Discover Premium Rainwear for Every Adventure Our curated
+            collection of rain jackets and ponchos is designed to cater to your
+            unique needs. From rugged hiking expeditions to serene camping
+            trips, we've got you covered. Explore our range of rainwear,
+            meticulously selected to withstand the challenges of the great
+            outdoors.
+          </p>
+        </div>
+        <div class="infoList">
+          <h2>Why Choose Rainy Days?</h2>
+          <ul>
+            <li>
+              <h3>Performance Meets Style:</h3>
+              <p>
+                Our rainwear blends cutting-edge waterproof technology with
+                stylish designs, ensuring you stay dry without sacrificing your
+                outdoor aesthetic.
+              </p>
+            </li>
+            <li>
+              <h3>Durable Quality:</h3>
+              <p>
+                Whether you're hiking through the wilderness or hitting the
+                slopes, our rain jackets are built to last, offering the
+                durability you need for your adventures.
+              </p>
+            </li>
+            <li>
+              <h3>Eco-Friendly Options:</h3>
+              <p>
+                We offer eco-conscious rainwear options made from sustainable
+                materials, so you can protect the environment while enjoying the
+                beauty of it.
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="infoCard">
+          <h2>Join Our Outdoor Community</h2>
+          <p>
+            At Rainy Days, we believe in the power of community. Join our forum
+            to connect with fellow outdoor enthusiasts, share your favorite
+            hiking trails, camping tips, and skiing experiences, and discover
+            new adventures waiting to be explored. Stay Informed Explore our
+            blog section, where we dive into the world of outdoor activities,
+            rainwear technology, and adventure stories. Get expert advice, gear
+            reviews, and stay updated on the latest trends in outdoor fashion.
+          </p>
+        </div>
+        <div class="infoCard">
+          <h2>Your Rainy Days Adventure Starts Here</h2>
+          <p>
+            Whether you're a seasoned outdoor explorer or just embarking on your
+            journey, Rainy Trails is your ultimate rainwear destination. Embrace
+            the elements and make every adventure memorable with our
+            high-performance rainwear. Are you ready to experience the great
+            outdoors without worrying about the weather? Browse our collection,
+            find your perfect rain jacket, and let your next adventure begin.
+          </p>
+        </div>
+        <div class="ctaInfo">
+          <a id="ctaInfo-button" href="Jackets.html">Start Exploring!</a>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
