--- a/Contact.html
+++ b/Contact.html
@@ -28,6 +28,52 @@
         </nav>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="contactPage">
+        <h1>REACH US</h1>
+        <div class="contactForm">
+          <form action="">
+            <label for="fullname">Full Name</label>
+            <input
+              type="text"
+              id="fullname"
+              name="fullname"
+              placeholder="Your Full Name"
+            />
+            <label for="email">Email</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="example@email.com"
+            />
+            <label for="textbox">Subject</label>
+            <textarea
+              name="subject"
+              id="textarea"
+              cols="30"
+              rows="10"
+            ></textarea>
+            <input id="submitButton" type="submit" value="Submit" />
+          </form>
+          <div class="contactInfo">
+            <picture class="contactImg">
+              <img
+                src="img/woman-5716875_1280.png"
+                alt="A woman reaching out"
+              />
+            </picture>
+            <p>
+              Questions, comments, or need assistance with your rainwear
+              selection? Don't hesitate to get in touch with us! You can reach
+              our friendly team at 454 03 220, or simply drop us an email at
+              support@rainydays.com. We're here to provide you with the
+              information and support you need for your outdoor adventures. Feel
+              free to reach out; we'd love to hear from you.
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
