--- a/Contact.html
+++ b/Contact.html
@@ -13,6 +13,7 @@
   <body>
     <header>
       <div>
+        <div>
         <nav class="navmenu">
           <a href="index.html" id="rainyLogo">
             <img src="img/RainyDays_Logo.png" alt="Home Logo"
@@ -56,13 +57,7 @@
             ></textarea>
             <input id="submitButton" type="submit" value="Submit" />
           </form>
-          <div class="contactInfo">
-            <picture class="contactImg">
-              <img
-                src="img/woman-5716875_1280.png"
-                alt="A woman reaching out"
-              />
-            </picture>
+          <div class="belowForm">
             <p>
               Questions, comments, or need assistance with your rainwear
               selection? Don't hesitate to get in touch with us! You can reach
@@ -71,6 +66,11 @@
               information and support you need for your outdoor adventures. Feel
               free to reach out; we'd love to hear from you.
             </p>
+          </div>
+          <div class="contactInfo">
+            <picture class="contactImg">
+              <img src="img/woman-5716875_1280.png" alt="A woman calling" />
+            </picture>
           </div>
         </div>
       </div>
