--- a/Jackets.html
+++ b/Jackets.html
@@ -139,7 +139,7 @@
             your outdoor activities.
           </p>
         </div>
-        <div class="card-last">
+        <div class="card">
           <img
             src="img/RainyDays_Jacket7.jpg"
             alt="Oransje vindstopper med belte, hette og refleks"
