--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <header>
-      <div>
-        <nav class="navmenu">
+      <div class="navmenu">
+        <nav>
           <a href="index.html" id="rainyLogo">
             <img src="img/RainyDays_Logo.png" alt="Home Logo"
           /></a>
@@ -25,6 +25,18 @@
             <i class="fa-solid fa-basket-shopping" style="color: #0a3641"></i>
           </a>
           <a href=""></a>
+        </nav>
+        <label id="bars-menu" for="hamburger-menu">
+          <i class="fas fa-bars"></i
+        ></label>
+        <input type="checkbox" id="hamburger-menu" />
+
+        <nav class="hamburger">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </nav>
       </div>
     </header>
@@ -66,19 +78,18 @@
           </div>
         </div>
         <div class="ecoCard">
-          <i class="fa-solid fa-recycle fa-2xl" style="color: #1e8522;"></i>
+          <i class="fa-solid fa-recycle fa-2xl" style="color: #1e8522"></i>
           <div class="ecoText">
             <h2>At Rainy Days,</h2>
             <p>
-               our passion for outdoor adventures goes hand in
-              hand with our commitment to eco-friendly business practices. We've
-              woven sustainability into every stitch of our rainwear, using
-              recycled materials and responsible sourcing. When you choose Rainy
-              Days, you choose rainwear that reflects your dedication to
-              sustainable exploration. Join our eco-conscious outdoor community
-              and embark on rain-soaked adventures with a clear conscience,
-              where protecting the environment is as important as the journey
-              itself.
+              our passion for outdoor adventures goes hand in hand with our
+              commitment to eco-friendly business practices. We've woven
+              sustainability into every stitch of our rainwear, using recycled
+              materials and responsible sourcing. When you choose Rainy Days,
+              you choose rainwear that reflects your dedication to sustainable
+              exploration. Join our eco-conscious outdoor community and embark
+              on rain-soaked adventures with a clear conscience, where
+              protecting the environment is as important as the journey itself.
             </p>
           </div>
         </div>
