--- a/index.html
+++ b/index.html
@@ -12,23 +12,22 @@
   </head>
   <body>
     <header>
-      <div class="navmenu">
-        <nav>
-          <a href="index.html" id="rainyLogo">
-            <img src="img/RainyDays_Logo.png" alt="Home Logo"
-          /></a>
-          <a class="links" href="index.html">Home</a>
-          <a class="links" href="Jackets.html">Jackets</a>
-          <a class="links" href="AboutUs.html">About</a>
-          <a class="links" href="Contact.html">Contact</a>
-          <a class="linkscart" href="Checkout.html">
-            <i class="fa-solid fa-basket-shopping" style="color: #0a3641"></i>
-          </a>
-          <a href=""></a>
-        </nav>
-        <label id="bars-menu" for="hamburger-menu">
-          <i class="fas fa-bars"></i
-        ></label>
+      <img class="logo" src="img/RainyDays_Logo.png" alt="Rainy days logo" />
+      <nav>
+        <ul class="nav_links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="Jackets.html">Jackets</a></li>
+          <li><a href="AboutUs.html">About</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+          <li>
+            <a id="basket" href="Checkout.html"
+              ><i class="fa-solid fa-basket-shopping" style="color: #0a3641"></i
+            ></a>
+          </li>
+        </ul>
+      </nav>
+      <div class="hamburger-menu">
+        <label for="hamburger-menu"> <i class="fas fa-bars"></i></label>
         <input type="checkbox" id="hamburger-menu" />
 
         <nav class="hamburger">
@@ -74,12 +73,11 @@
               camping trip, this rain jacket keeps you dry while caring for the
               planet.
             </p>
-            <a href="Jackets.html">Explore our bestseller</a>
+            <a href="jacketSpesifick.html">Explore our bestseller</a>
           </div>
         </div>
         <div class="ecoCard">
-          <i class="fa-solid fa-recycle fa-2xl" style="color: #1e8522"></i>
-          <div class="ecoText">
+          <div>
             <h2>At Rainy Days,</h2>
             <p>
               our passion for outdoor adventures goes hand in hand with our
