--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact/Rainy-days</title>
     <link rel="stylesheet" href="Styles.css" />
     <script
       src="https://kit.fontawesome.com/7c44b2e8ec.js"
@@ -12,20 +12,30 @@
   </head>
   <body>
     <header>
-      <div>
-        <div>
-        <nav class="navmenu">
-          <a href="index.html" id="rainyLogo">
-            <img src="img/RainyDays_Logo.png" alt="Home Logo"
-          /></a>
-          <a class="links" href="index.html">Home</a>
-          <a class="links" href="Jackets.html">Jackets</a>
-          <a class="links" href="AboutUs.html">About</a>
-          <a class="links" href="Contact.html">Contact</a>
-          <a class="linkscart" href="Checkout.html">
-            <i class="fa-solid fa-basket-shopping" style="color: #0a3641"></i>
-          </a>
-          <a href=""></a>
+      <img class="logo" src="img/RainyDays_Logo.png" alt="Rainy days logo" />
+      <nav>
+        <ul class="nav_links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="Jackets.html">Jackets</a></li>
+          <li><a href="AboutUs.html">About</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+          <li>
+            <a id="basket" href="Checkout.html"
+              ><i class="fa-solid fa-basket-shopping" style="color: #0a3641"></i
+            ></a>
+          </li>
+        </ul>
+      </nav>
+      <div class="hamburger-menu">
+        <label for="hamburger-menu"> <i class="fas fa-bars"></i></label>
+        <input type="checkbox" id="hamburger-menu" />
+
+        <nav class="hamburger">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="AboutUs.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </nav>
       </div>
     </header>
