--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/7c44b2e8ec.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js/api.js" type="module"></script>
   </head>
   <body>
     <header>
