--- a/Jackets.html
+++ b/Jackets.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Jackets/Rainy-days</title>
     <link rel="stylesheet" href="Styles.css" />
     <script
       src="https://kit.fontawesome.com/7c44b2e8ec.js"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="js/api.js"></script>
   </head>
   <body>
     <header>
@@ -34,17 +33,147 @@
         <nav class="hamburger">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="AboutUs.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <main>
-      <h1 class="h1-jackets">EXPLORE OUR JACKETS</h1>
-      <div id="productsContainer">
-        <div class="searchContainer"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col"></div>
+        </div>
       </div>
+      <!--<h1 class="h1-jackets">EXPLORE OUR JACKETS</h1>
+      <div class="product-cards">
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket1.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket2.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket3.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket4.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket5.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket6.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+        <div class="card">
+          <img
+            src="img/RainyDays_Jacket7.jpg"
+            alt="Oransje vindstopper med belte, hette og refleks"
+          />
+          <h2>Trailblazer Pro Waterproof Jacket</h2>
+          <p class="price">
+            $200,- <a class="buy-button" href="Checkout.html">Buy Now</a>
+          </p>
+          <p class="jacket-text">
+            The Trailblazer Pro Waterproof Jacket is designed for the rugged
+            outdoor explorer like Owen. Made with high-performance waterproof
+            and breathable fabric, it keeps you dry and comfortable on long
+            hikes, camping trips, and skiing adventures. With multiple pockets
+            and adjustable features, it's both functional and versatile for all
+            your outdoor activities.
+          </p>
+        </div>
+      </div>-->
     </main>
   </body>
 </html>
