--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home/Rainy-days</title>
     <link rel="stylesheet" href="Styles.css" />
     <script
       src="https://kit.fontawesome.com/7c44b2e8ec.js"
       crossorigin="anonymous"
     ></script>
-    <script src="js/api.js" type="module"></script>
+    <script src="./js/index.js" type="module"></script>
   </head>
   <body>
     <header>
@@ -34,7 +34,7 @@
         <nav class="hamburger">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="AboutUs.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -57,8 +57,12 @@
           </h1>
         </div>
       </section>
-      <section class="main-content">
-        <div class="CTAcard">
+      
+        <div id="BestSellers"></div>
+      <!--<section class="main-content">
+        <h2>Best sellers</h2>
+
+        <!-- <div class="CTAcard">
           <img
             id="homeJacket"
             src="img/RainyDays_Jacket1.jpg"
@@ -76,7 +80,7 @@
             </p>
             <a href="jacketSpesifick.html">Explore our bestseller</a>
           </div>
-        </div>
+        </div> -->
         <div class="ecoCard">
           <div>
             <h2>At Rainy Days,</h2>
