--- a/Jackets.html
+++ b/Jackets.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/7c44b2e8ec.js"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="./js/Jackets.js"></script>
   </head>
   <body>
     <header>
@@ -41,9 +42,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="row">
-          <div class="col"></div>
-        </div>
+        <ul id="productList"></ul>
       </div>
       <!--<h1 class="h1-jackets">EXPLORE OUR JACKETS</h1>
       <div class="product-cards">
