--- a/jacketSpesifick.html
+++ b/jacketSpesifick.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/7c44b2e8ec.js"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="./js/single.js"></script>
   </head>
   <body>
     <header>
@@ -41,7 +42,7 @@
     </header>
     <main>
       <div class="showcase">
-        <img
+        <!--<img
           src="img/RainyDays_Jacket1.jpg"
           alt="Oransje vindstopper med belte, hette og refleks"
         />
@@ -104,7 +105,7 @@
           Ready to experience the bliss of eco-friendly adventure? Choose
           Nature's Bliss and step into a world where every raindrop is a
           reminder of your commitment to nature and sustainability.
-        </h3>
+        </h3>-->
       </div>
     </main>
   </body>
