--- a/Checkout.html
+++ b/Checkout.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/7c44b2e8ec.js"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="js/scripts.js"></script>
   </head>
   <body>
     <header>
@@ -40,7 +41,8 @@
       </div>
     </header>
     <main>
-      <div class="check-out">
+      <div id="cart"></div>
+      <!--<div class="check-out">
         <div class="check-out_form">
           <form action="Checkout.html">
             <label for="fullname">Full Name</label>
@@ -120,7 +122,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </div>-->
     </main>
   </body>
 </html>
